--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div id="header">
       <div id="top_links_container">
         <% if current_user %>
-            Logged in as <%= current_user.email %> |
+            Logged in as <%= current_user.username %> |
             <%= link_to 'home', root_path %> | 
             <%= link_to 'logout', destroy_user_session_path %>
         <% else %>
