--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -3,6 +3,12 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <p><%= f.label :username %><br />
+  <%= f.text_field :username %></p>
+
+  <p><%= f.label :full_name %><br />
+  <%= f.text_field :full_name %></p>
+
   <p><%= f.label :email %><br />
   <%= f.email_field :email %></p>
 
