--- a/app/views/groups/_users_list.html.erb
+++ b/app/views/groups/_users_list.html.erb
@@ -1,10 +1,16 @@
-<ul id="groups_list">
-	<% groups.each do |group| %>
-		<li<% if groups.first == group %> class="first"<% end %>>
-			<div class="group_message_container">
-                <%= group.group_name %>
-				<%= h link_to group.group_name, group_info_path(group.id) %>
-				<%= h group.group_description %>
+<h1>Followers</h1>
+
+<ul id="users_list">
+	<% users.each do |user| %>
+		<li<% if users.first == user %> class="first"<% end %>>
+			<div class="user_message_container">
+				<%= h link_to user.username, user_info_path(user.username) %>
+                <% if user.posts.length > 0 %>
+                    <%= h user.posts.last.message %>
+                    <div class="time_ago">
+                        <%= distance_of_time_in_words_to_now(user.posts.last.created_at) %> ago
+                    </div>
+                <% end %>
 			</div>
 			<div class="clear"></div>
 		 </li>
