--- a/app/views/home/_posts_list.html.erb
+++ b/app/views/home/_posts_list.html.erb
@@ -6,6 +6,9 @@
 			<div class="post_message_container">
 				<%= h link_to post.user.username, user_info_path(post.user.username) %>
 				<%= h post.message %>
+                <div class="group">
+                    <%= h link_to Group.find_by_id(post.group_id).group_name, group_info_path(post.group_id) %>
+                </div>
 				<div class="time_ago">
 					<%= distance_of_time_in_words_to_now(post.created_at) %> ago
 				</div>
