--- a/app/views/home/users.html.erb
+++ b/app/views/home/users.html.erb
@@ -1,7 +1,7 @@
 <ul id="users_list">
 	<% @users.each do |user| %>
 		<li id="<%= user.username %>" <% if @users.first == user %> class="first"<% end %>>
-			<div class="flit_message_container" style="width: 305px;">
+			<div class="user_message_container" style="width: 305px;">
 				<h3><%= h link_to user.username, user_info_path(user.username) %></h3>
                 <% if user.posts.length > 0 %>
     				<%= h user.posts.last.message %>
@@ -10,7 +10,7 @@
                       </div>
                 <% end %>
 			</div>
-            <% if user != current_user %>
+            <% if user != current_user and !current_user.nil? %>
                 <div class="button_container">
                     <input type='button' id="btn_<%= user.username %>" name='<%= user.username %>' value='<%= (current_user.is_friend? user) ? "Unfollow" : "Follow" %>' class='button ajax_button'></input>
                 </div>
