Modifications for the group/topic dynamic backend, along with relationships between user/group. Some small display updates

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,5 +13,5 @@
 
 &nbsp;
 
-<%= render :partial => "posts_list", :locals => {:posts => @posts } %>
-<%= render :partial => "users_list", :locals => {:users => @users } %>
+<%= render :partial => "topics_list", :locals => {:topics => @topics } %>
+<%= render :partial => "members_list", :locals => {:members => @members } %>
