--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -15,3 +15,5 @@
 
 <%= render :partial => "topics_list", :locals => {:topics => @topics } %>
 <%= render :partial => "members_list", :locals => {:members => @members } %>
+
+REPLY
