--- a/app/views/users/_posts_list.html.erb
+++ b/app/views/users/_posts_list.html.erb
@@ -5,7 +5,7 @@
 		<li<% if posts.first == post %> class="first"<% end %>>
 			<div class="post_message_container">
 				<%= h link_to post.user.username, user_info_path(post.user.username) %>
-				<%= h post.message %>
+				<%= h link_to post.message, post_info_path(post.id) %>
 				<div class="time_ago">
 					<%= distance_of_time_in_words_to_now(post.created_at) %> ago
 				</div>
