--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,24 @@
-<h1><%= @user.username %></h1>
+<% if @user %>
+
+    <h1><%= @user.username %></h1>
 
 
-<% if @user != current_user and !current_user.nil? %>
-    <%- form_tag toggle_follow_user_path do -%>
-        <div id="submit_button_container">
-            <%= submit_tag (current_user.is_friend? @user) ? "Unfollow" : "Follow", :class => "button" %>
-        </div>
-        <div class="clear"></div>
-    <%- end -%>
+    <% if @user != current_user and current_user %>
+        <%- form_tag toggle_follow_user_path do -%>
+            <div id="submit_button_container">
+                <%= submit_tag (current_user.following? @user) ? "Unfollow" : "Follow", :class => "button" %>
+            </div>
+            <div class="clear"></div>
+        <%- end -%>
+    <% end %>
+
+    &nbsp;
+
+    <%= render :partial => "posts_list", :locals => {:posts => @posts } %>
+    <%= render :partial => "groups_list", :locals => {:groups => @groups } %>
+
+<% else %>
+
+This user does not exist
+
 <% end %>
-
-&nbsp;
-
-<%= render :partial => "posts_list", :locals => {:posts => @posts } %>
-<%= render :partial => "groups_list", :locals => {:groups => @groups } %>
