--- a/app/views/posts/_comments_list.html.erb
+++ b/app/views/posts/_comments_list.html.erb
@@ -1,10 +1,10 @@
-<% posts.each do |post| %>
-    <li<% if posts.first == post %> class="first"<% end %>>
-        <div class="post_message_container">
-            <%= h link_to post.user.username, user_info_path(post.user.username) %>
-            <%= h post.message %>
+<% comments.each do |comment| %>
+    <li<% if comments.first == comment %> class="first"<% end %>>
+        <div class="comment_message_container">
+            <%= h link_to comment.user.username, user_info_path(comment.user.username) %>
+            <%= h comment.message %>
             <div class="time_ago">
-                <%= distance_of_time_in_words_to_now(post.created_at) %> ago
+                <%= distance_of_time_in_words_to_now(comment.created_at) %> ago
             </div>
         </div>
         <div class="clear"></div>
