--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,10 @@
   <head>
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
     <%= stylesheet_link_tag "application" %>
+    <%= stylesheet_link_tag "jquery-ui-1.8.12" %>
     <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag "jquery-ui-1.8.12.min" %>
+    <%= javascript_include_tag "autocomplete-rails" %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
