switched up comments to actually be posts

--- a/app/views/home/_create_post.html.erb
+++ b/app/views/home/_create_post.html.erb
@@ -2,7 +2,7 @@
 	<div id="new_post_form">
 		<div class="clear"></div>
 		<%= f.text_area :message %>
-        <%= f.hidden_field :group_id, :value => @group.id %>
+        <%= f.autocomplete_field :group, autocomplete_group_name_groups_path %>
 		<div id="submit_button_container">
             <%= f.submit "Post", :class => "button" %>
 		</div>
