--- a/app/views/groups/_create_post.html.erb
+++ b/app/views/groups/_create_post.html.erb
@@ -1,11 +1,34 @@
-<%- form_for Post.new do |f| -%>
-	<div id="new_post_form">
-		<div class="clear"></div>
-		<%= f.text_area :message %>
-        <%= f.hidden_field :group_id, :value => @group.id %>
-		<div id="submit_button_container">
-            <%= f.submit "Post", :class => "button" %>
-		</div>
-		<div class="clear"></div>
-	</div>
-<%- end -%>
+<div id="new_post_form">
+    <div class="clear"></div>
+    <input type="textarea" id="txt_post_message" />
+    <div id="submit_button_container">
+        <input type="button" id="btn_post_create" class="button ajax_button" value="Post" title="Post" />
+    </div>
+    <div class="clear"></div>
+</div>
+
+<script type="text/javascript">
+   //on page load
+   $(document).ready(function() {
+        $('#btn_post_create').click(function(e) {
+           var group_id = "<%= @group.id %>";
+           var message = $("#txt_post_message").val();
+
+            $.ajax({
+                type: "POST",
+                url: "/ajax/post",
+                data: ({
+                    "message" : message,
+                    "group_id" : group_id
+                }),
+                success: function(post_id) {
+                    if (post_id == null || post_id < 0) {
+                        alert("Error saving post. Please re-try.");
+                    } else {
+                       alert(post_id);
+                    }
+                }
+            });
+        });
+   });
+</script>
